[package]
name = "chimitheque_pubchem"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Bellembois <thomas.bellembois@proton.me>"]
description = "PubChem connector for Chimithèque"
license = "GPL-3.0"
repository = "https://github.com/tbellembois/chimitheque_pubchem"
homepage = "https://github.com/tbellembois/chimitheque_pubchem"
readme = "README.md"
categories = ["database", "science"]
keywords = ["chemistry", "biology", "database", "management"]
rust-version = "1.94.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
env_logger = "0.11.8"
futures = "0.3.31"
governor = "0.10.1"
image = "0.25.8"
log = "0.4.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
ureq = { version = "3", features = ["json"] }
urlencoding = "2.1.3"

chimitheque_types = { git = "https://github.com/tbellembois/chimitheque_types.git", branch = "main" }

[patch."https://github.com/tbellembois/chimitheque_types.git"]
chimitheque_types = { path = "../chimitheque_types" }
