[package]
name = "chimitheque_pubchem"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Bellembois <thomas.bellembois@proton.me>"]
description = "PubChem connector for Chimithèque"
license = "GPL-3.0"
repository = "https://github.com/tbellembois/chimitheque_pubchem"
homepage = "https://github.com/tbellembois/chimitheque_pubchem"
readme = "README.md"
categories = ["database", "science"]
keywords = ["chemistry", "biology", "database", "management"]
rust-version = "1.94.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.22.1", default-features = false }
env_logger = { version = "0.11.10", default-features = false }
futures = { version = "0.3.32", default-features = false, features = ["executor"] }
governor = { version = "0.10.4", default-features = false, features = ["std"] }
image = { version = "0.25.10", default-features = false }
log = { version = "0.4.29", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
ureq = { version = "3.3.0", default-features = false, features = ["json", "rustls", "gzip"] }
urlencoding = { version = "2.1.3", default-features = false }

chimitheque_types = { git = "https://github.com/tbellembois/chimitheque_types.git", branch = "main" }

[patch."https://github.com/tbellembois/chimitheque_types.git"]
chimitheque_types = { path = "../chimitheque_types" }
